# lgmath_autodiff

./: CMakeLists.txt  README.md
include/: lgmath.hpp
include/lgmath/: CommonMath.hpp  CommonTools.hpp
include/lgmath/se3/: OperationsAutodiff.hpp  OperationsAutodiffBackward.hpp  OperationsAutodiffForward.hpp
include/lgmath/so3/: OperationsAutodiff.hpp  OperationsAutodiffBackward.hpp  OperationsAutodiffForward.hpp
src/: CommonMath.cpp
src/se3/: OperationsAutodiff.cpp
src/so3/: Operations.cpp  OperationsAutodiff.cpp
tests/: SE3AutodiffTests.cpp  SE3AutodiffTestsBackward.cpp  SE3AutodiffTestsForward.cpp  SO3AutodiffTests.cpp  SO3AutodiffTestsBackward.cpp  SO3AutodiffTestsForward.cpp
